--- a/vtk/Dockerfile
+++ b/vtk/Dockerfile
@@ -11,10 +11,11 @@ RUN cd /tmp && \
     -D BUILD_DOCUMENTATION:BOOL=OFF \
     -D BUILD_EXAMPLES:BOOL=OFF \
     -D BUILD_TESTING:BOOL=OFF \
+    -D BUILD_SHARED_LIBS:BOOL=ON \
     -D VTK_USE_X:BOOL=OFF \
     -D VTK_INSTALL_NO_DEVELOPMENT:BOOL=OFF \
     -D VTK_RENDERING_BACKEND:STRING=None \
-    -D VTK_USE_PARALLEL:BOOL=OFF \
+    -D VTK_USE_PARALLEL:BOOL=ON \
     -D VTK_Group_MPI:BOOL=ON \
     -D VTK_Group_StandAlone:BOOL=ON \
     -D VTK_Group_Rendering:BOOL=OFF \
