Try turning on MPI again.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,7 +233,7 @@ workflows:
             - slepc
       - mfem:
           requires:
-            - vtk
+            - slepc
       - mkl_vtk:
           requires:
             - vtk
