--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -18,6 +18,7 @@ RUN cd /tmp && \
     cd build && \
     cmake .. -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
              -DMFEM_USE_PETSC=YES \
+             -DMFEM_USE_MPI=YES \
              -DVERBOSE=YES \
              -DPETSC_DIR=$PETSC_DIR && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
