--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,27 @@ jobs:
           paths:
             - branch_cache
 
+  dev_docker:
+    executor: compiler
+    steps:
+      - checkout
+      - setup_remote_docker:
+          reusable: true
+          exclusive: true
+      - run:
+          name: Install bash
+          command: apk add --no-cache bash
+      - attach_workspace:
+          at: /root/repo/
+      - run:
+          name: Build + deploy image
+          command: ./build-and-deploy-image dev_docker
+          no_output_timeout: 30m
+      - persist_to_workspace:
+          root: /root/repo
+          paths:
+            - branch_cache
+
   intel_mkl:
     executor: compiler
     steps:
@@ -154,6 +175,48 @@ jobs:
           paths:
             - branch_cache
 
+  python_bionic:
+    executor: compiler
+    steps:
+      - checkout
+      - setup_remote_docker:
+          reusable: true
+          exclusive: true
+      - run:
+          name: Install bash
+          command: apk add --no-cache bash
+      - attach_workspace:
+          at: /root/repo/
+      - run:
+          name: Build + deploy image
+          command: ./build-and-deploy-image python_bionic
+          no_output_timeout: 30m
+      - persist_to_workspace:
+          root: /root/repo
+          paths:
+            - branch_cache
+
+  ruby_bionic:
+    executor: compiler
+    steps:
+      - checkout
+      - setup_remote_docker:
+          reusable: true
+          exclusive: true
+      - run:
+          name: Install bash
+          command: apk add --no-cache bash
+      - attach_workspace:
+          at: /root/repo/
+      - run:
+          name: Build + deploy image
+          command: ./build-and-deploy-image ruby_bionic
+          no_output_timeout: 30m
+      - persist_to_workspace:
+          root: /root/repo
+          paths:
+            - branch_cache
+
   slepc:
     executor: compiler
     steps:
@@ -225,6 +288,9 @@ workflows:
       - dealii:
           requires:
             - trilinos
+      - dev_docker:
+          requires:
+            - ruby_bionic
       - intel_mkl:
           requires:
             - cmake
@@ -240,6 +306,8 @@ workflows:
       - petsc:
           requires:
             - vtk
+      - python_bionic
+      - ruby_bionic
       - slepc:
           requires:
             - petsc
