--- a/vtk/Dockerfile
+++ b/vtk/Dockerfile
@@ -11,7 +11,7 @@ RUN cd /tmp && \
     -D BUILD_DOCUMENTATION:BOOL=OFF \
     -D BUILD_EXAMPLES:BOOL=OFF \
     -D BUILD_TESTING:BOOL=OFF \
-    -D BUILD_SHARED_LIBS:BOOL=ON \
+    -D BUILD_SHARED_LIBS:BOOL=OFF \
     -D VTK_USE_X:BOOL=OFF \
     -D VTK_INSTALL_NO_DEVELOPMENT:BOOL=OFF \
     -D VTK_RENDERING_BACKEND:STRING=None \
