--- a/vtk/Dockerfile
+++ b/vtk/Dockerfile
@@ -10,7 +10,7 @@ RUN cd /tmp && \
     wget -nv -O- http://www.vtk.org/files/release/$VTK_MAJOR_VERSION.$VTK_MINOR_VERSION/VTK-$VTK_VERSION.tar.gz | \
     tar xz && \
     cd VTK-$VTK_VERSION && \
-    CXX=mpicxx cmake \
+    cmake \
     -D CMAKE_BUILD_TYPE:STRING=Release \
     -D CMAKE_INSTALL_PREFIX:STRING=/usr/lib/vtk \
     -D BUILD_DOCUMENTATION:BOOL=OFF \
@@ -20,8 +20,8 @@ RUN cd /tmp && \
     -D VTK_USE_X:BOOL=OFF \
     -D VTK_INSTALL_NO_DEVELOPMENT:BOOL=OFF \
     -D VTK_RENDERING_BACKEND:STRING=None \
-    -D VTK_USE_PARALLEL:BOOL=ON \
-    -D VTK_Group_MPI:BOOL=ON \
+    -D VTK_USE_PARALLEL:BOOL=OFF \
+    -D VTK_Group_MPI:BOOL=OFF \
     -D VTK_Group_StandAlone:BOOL=ON \
     -D VTK_Group_Rendering:BOOL=OFF \
     -D VTK_Group_Imaging:BOOL=OFF \
