Use MPI compiler for MFEM.

--- a/mfem/Dockerfile
+++ b/mfem/Dockerfile
@@ -16,11 +16,12 @@ RUN cd /tmp && \
     cd mfem && \
     mkdir build && \
     cd build && \
-    cmake .. -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
-             -DMFEM_USE_PETSC=YES \
-             -DMFEM_USE_MPI=YES \
-             -DVERBOSE=YES \
-             -DPETSC_DIR=$PETSC_DIR && \
+    CXX=mpicxx cmake .. \
+        -DCMAKE_INSTALL_PREFIX=$MFEM_DIR \
+        -DMFEM_USE_PETSC=YES \
+        -DMFEM_USE_MPI=YES \
+        -DVERBOSE=YES \
+        -DPETSC_DIR=$PETSC_DIR && \
     make -j $(cat /proc/cpuinfo | grep processor | wc -l) && \
     make install && \
     cd /tmp && rm -rf mfem
