MFEM only uses PETSC, not SLEPC

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -323,7 +323,7 @@ workflows:
             - slepc
       - mfem:
           requires:
-            - slepc
+            - petsc
       - mkl_vtk:
           requires:
             - vtk
